@@ -1,3 +1,7 @@
+2003-09-08	ujwal
+
+    * Addressbook menu gets shortcuts only for main menu.
+
 2003-09-07	ujwal
 
     * Fixed printSelection where unnecessary white space was being printed.
